Fixed error with h1 tag not showing (removed height from .container).

--- a/index.css
+++ b/index.css
@@ -13,10 +13,6 @@ body {
   align-items: center;
 }
 
-.container {
-  height: 100%;
-}
-
 .banner {
   height: 285px;
   width: 100%;
